--- a/栅格布局系统/css/grid.css
+++ b/栅格布局系统/css/grid.css
@@ -353,6 +353,42 @@
     margin-left: 0%;
   }
 }
+.col-width-12 {
+  width: 100%;
+}
+.col-width-11 {
+  width: 91.66666667%;
+}
+.col-width-10 {
+  width: 83.33333333%;
+}
+.col-width-9 {
+  width: 75%;
+}
+.col-width-8 {
+  width: 66.66666667%;
+}
+.col-width-7 {
+  width: 58.33333333%;
+}
+.col-width-6 {
+  width: 50%;
+}
+.col-width-5 {
+  width: 41.66666667%;
+}
+.col-width-4 {
+  width: 33.33333333%;
+}
+.col-width-3 {
+  width: 25%;
+}
+.col-width-2 {
+  width: 16.66666667%;
+}
+.col-width-1 {
+  width: 8.33333333%;
+}
 .fix-flex {
   width: 100%;
   position: relative;
