--- a/栅格布局系统/less/variables.less
+++ b/栅格布局系统/less/variables.less
@@ -4,8 +4,7 @@
 
 //** Number of columns in the grid.
 @grid-columns:              12;
-//** Padding between columns. Gets divided in half for the left and right.
-@grid-gutter-width:         30px;
+
 
 
 
@@ -24,12 +23,12 @@
 //## Define the maximum width of `.container` for different screen sizes.
 
 // Medium screen / desktop
-@container-desktop:            (940px + @grid-gutter-width);
+@container-desktop:            (970px);
 //** For `@screen-md-min` and up.
 @container-md:                 @container-desktop;
 
 // Large screen / wide desktop
-@container-large-desktop:      (1140px + @grid-gutter-width);
+@container-large-desktop:      (1170px);
 //** For `@screen-lg-min` and up.
 @container-lg:                 @container-large-desktop;
 
