--- a/栅格布局系统/test-less/test-extend.less
+++ b/栅格布局系统/test-less/test-extend.less
@@ -5,3 +5,11 @@
   &:extend(.a);
   background-color: #c0c0c0;
 }
+
+
+@nice-blue: #5B83AD;
+@light-blue: @nice-blue + #111;
+
+#header {
+  color: @light-blue;
+}
