--- a/栅格布局系统/less/mixins/grid-framework.less
+++ b/栅格布局系统/less/mixins/grid-framework.less
@@ -89,15 +89,9 @@
   .loop-grid-columns(@grid-columns, @class, offset);
 }
 
-//不在栅格系统里，但使用栅格系统的宽度
+//Use width
 .make-grid-without-float(@name){
   .loop-grid-columns(@grid-columns, @name, width);
 }
 
-// Flex-Fix
-.fix(@width:@fix-column-width){
-  width:@width;
-  position:absolute;
-  top:0;
-  height:100%;
-}
+
